dynamic images and card changes

--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,7 @@
 .card{
-    width: 300px;
-    padding-left:20px ;
+    width: 250px;
     margin-left: 20px;
     margin-bottom: 20px;
+    margin-right: 0px;
+    
 }
